--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <h1>Memory Game!</h1>
-    <div id="game">
-    </div>
+    <div id="game"></div>
     <script src="script.js"></script>
   </body>
 </html>
