--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Memory Game!</title>
+    <title>Memory Game</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Mochiy Pop One"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Memory Game!</h1>
+    <h1>Memory Game</h1>
     <div id="game"></div>
+    <button>Start</button>
     <script src="script.js"></script>
   </body>
 </html>
