Added Start game functionality and css blur

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <h1>Memory Game</h1>
-    <div id="game"></div>
-    <button>Start</button>
+    <div id="game" class="blur"></div>
+    <button id="start-game">Start</button>
     <script src="script.js"></script>
   </body>
 </html>
