Added guess counter

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   </head>
   <body>
     <h1>Memory Game</h1>
-    <div id="game" class="blur"></div>
+    <div id="game" class="blur">
+      <h2>Guesses:<span id="score"></span></h2>
+    </div>
     <button id="start-game">Start</button>
+
     <script src="script.js"></script>
   </body>
 </html>
