Restart game functionality added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <h1>Memory Game</h1>
-    <div id="game" class="blur">
-      <h2>Guesses:<span id="score"></span></h2>
-    </div>
+    <h2 class="blur">Guesses:<span id="score"></span></h2>
+    <div id="game" class="blur"></div>
     <button id="start-game">Start</button>
+    <button id="restart">Restart</button>
 
     <script src="script.js"></script>
   </body>
