Score display and high score working w/ local storage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <h1>Memory Game</h1>
     <h2 class="blur">Guesses:<span id="score"></span></h2>
+    <h3 class="blur">High Score:<span id="high-score"></span></h2>
     <div id="game" class="blur"></div>
     <button id="start-game">Start</button>
     <button id="restart">Restart</button>
